--- a/podcasts.html
+++ b/podcasts.html
@@ -5,6 +5,8 @@ title: Podcasts
 
 <h1>Podcasts</h1>
 
+{% assign podcasts = site.podcasts | sort: 'date' | reverse %}
+
 {% for podcast in site.podcasts %}
 <div class="row content-container">
     <!-- <div class="col-sm-12"> -->
