--- a/podcasts.html
+++ b/podcasts.html
@@ -5,7 +5,7 @@ title: Podcasts
 
 <h1>Podcasts</h1>
 
-{% assign podcasts = site.podcasts | sort: 'date' | reverse %}
+{% assign podcasts = site.podcasts | sort: 'date' %}
 
 {% for podcast in site.podcasts %}
 <div class="row content-container">
